--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <script>
+        Function Tmp() {
+            if confirm('Хотите перевести температуру из C в F ?') {
+                let Tf;
+                let Tc = +prompt('Введите температуру в градусах по Цельсию')
+                Tf = (9 / 5) * Tc + 32;
+                console.log(Tf);
+            }
+        }
+    </script>
+    <button onclick="Tmp()">Calculete</button>
 </body>
+
 </html>
