function is not define

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         Function Tmp() {
-            if confirm('Хотите перевести температуру из C в F ?') {
+            if (confirm('Хотите перевести температуру из C в F ?')) {
                 let Tf;
                 let Tc = +prompt('Введите температуру в градусах по Цельсию')
                 Tf = (9 / 5) * Tc + 32;
