--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <button onclick="Tmp()">Calculete</button>
+    <button onclick="Tmp()">C/F конвектор</button>
     <br><br><br>
     <button onclick="nameAdm()">Переменные</button>
     <br><br><br>
