--- a/index.html
+++ b/index.html
@@ -128,6 +128,24 @@
             }
         }
     </script>
+
+    <script>
+        function plus(a, b) {
+            return a + b;
+        }
+
+        function minus(a, b) {
+            return a + b;
+        }
+
+        function multiply(a, b) {
+            return a * b;
+        }
+
+        function share(a, b) {
+            return a / b;
+        }
+    </script>
 </body>
 
 </html>
