class to script

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         }
     </script>
 
-    <script>
+    <script class="play">
         function play(player) {
             let val = randomChoice();
             let message1 = ('Ничья');
