--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
     <br><br><br>
     <button onclick="power()">Рекурсия</button>
     <br><br><br>
+    <hr>
     <button onclick="play(0)">Камень</button>
     <button onclick="play(1)">Ножницы</button>
     <button onclick="play(2)">Бумага</button>
+    <br><br>
+    <div id="text">ТУТ БУДЕТ РЕЗУЛЬТАТ!!!</div>
+    <br>
+    <div> СЧЕТ </div>
+    <br>
+    <span> Вы </span><span id="playerScore">0</span><span> : </span><span id="compScore">0</span><span> Компьютер </span>
+    <br><br>
+    <button onclick="clearResult()">Сбросить результаты</button>
+    <hr>
     <!-- <script class="tmp">
         function tmp() {
             let res;
@@ -233,6 +243,9 @@
             let message1 = ('Ничья');
             let message2 = ('Вы выиграли');
             let message3 = ('Вы проиграли');
+            let text = document.getElementById('text');
+            let playerScore = document.getElementById('playerScore');
+            let compScore = document.getElementById('compScore');
 
             switch (compChoice) {
                 case 0:
@@ -249,32 +262,51 @@
             if (playerChoice == 0) {
                 if (compChoice == 0) {
                     console.log(`${message1} ${computer}`);
+                    text.innerHTML = 'Ничья';
                 } else if (compChoice == 1) {
                     console.log(`${message2} ${computer}`);
+                    text.innerHTML = 'Вы выиграли';
+                    playerScore.innerHTML = (Number(playerScore.textContent) + 1);                    
                 } else if (compChoice == 2) {
                     console.log(`${message3} ${computer}`);
+                    text.innerHTML = 'Вы проиграли';
+                    compScore.innerHTML = Number((compScore.textContent)) + 1;
                 }
             } else if (playerChoice == 1) {
                 if (compChoice == 0) {
                     console.log(`${message3} ${computer}`);
+                    text.innerHTML = 'Вы проиграли';
+                    compScore.innerHTML = Number((compScore.textContent)) + 1;
                 } else if (compChoice == 1) {
                     console.log(`${message1} ${computer}`);
+                    text.innerHTML = 'Ничья';
                 } else if (compChoice == 2) {
                     console.log(`${message2} ${computer}`);
+                    text.innerHTML = 'Вы выиграли';
+                    playerScore.innerHTML = (Number(playerScore.textContent) + 1);
                 }
             } else {
                 if (compChoice == 0) {
                     console.log(`${message2} ${computer}`);
+                    text.innerHTML = 'Вы выиграли';
+                    playerScore.innerHTML = (Number(playerScore.textContent) + 1);
                 } else if (compChoice == 1) {
                     console.log(`${message3} ${computer}`);
+                    text.innerHTML = 'Вы проиграли';
+                    compScore.innerHTML = Number((compScore.textContent)) + 1;
                 } else if (compChoice == 2) {
                     console.log(`${message1} ${computer}`);
+                    text.innerHTML = 'Ничья';
                 }
             }
         }
 
         function randomChoice() {
             return parseInt(Math.random() * 3);
+        }
+        function clearResult(){
+            playerScore.innerHTML = 0;
+            compScore.innerHTML = 0;
         }
     </script>
 
