--- a/index.html
+++ b/index.html
@@ -241,9 +241,7 @@
     <script class="play">
         function play(playerChoice) {
             let compChoice = randomChoice();
-            let message1 = ('Ничья');
-            let message2 = ('Вы выиграли');
-            let message3 = ('Вы проиграли');
+            let message = ['Ничья','Вы выиграли','Вы проиграли'];            
             let text = document.getElementById('text');
             let playerScore = document.getElementById('playerScore');
             let compScore = document.getElementById('compScore');
@@ -262,27 +260,27 @@
 
             if (playerChoice == 0) {
                 if (compChoice == 0) {
-                    draw(message1);
+                    draw(message[1]);
                 } else if (compChoice == 1) {
-                    winer(message2);
+                    winer(message[2]);
                 } else if (compChoice == 2) {
-                    luser(message3);
+                    luser(message[3]);
                 }
             } else if (playerChoice == 1) {
                 if (compChoice == 0) {
-                    luser(message3);
+                    luser(message[3]);
                 } else if (compChoice == 1) {
-                    draw(message1);
+                    draw(message[1]);
                 } else if (compChoice == 2) {
-                    winer(message2);
+                    winer(message[2]);
                 }
             } else {
                 if (compChoice == 0) {
-                    winer(message2);
+                    winer(message[2]);
                 } else if (compChoice == 1) {
-                    luser(message3);
+                    luser(message[3]);
                 } else if (compChoice == 2) {
-                    draw(message1);
+                    draw(message[1]);
                 }
             }
         }
