for and piramid

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br><br><br>
     <button onclick="Con()">Конкатенация</button>
     <br><br><br> -->
-    <button onclick="wNamber()">Поиск ответа</button>
+    <!-- <button onclick="wNamber()">Поиск ответа</button>
     <button onclick="wNamber_2()">Поиск ответа 2</button>
     <br><br><br>
     <button onclick="calculate()">Считаем?</button>
@@ -40,7 +40,8 @@
     </span>
     <br><br>
     <button onclick="clearResult()">Сбросить результаты</button>
-    <hr>
+    <hr> -->
+    <button onclick="piramid()">Piramid</button>
     <!-- <script class="tmp">
         function tmp() {
             let res;
@@ -91,8 +92,7 @@
             console.log(1000 + "108"); //1000108
         }
     </script> -->
-
-    <script class="wNamber">
+    <!-- <script class="wNamber">
         // V_1          В варианте str
         function wNamber() {
 
@@ -301,8 +301,21 @@
             console.log(`${message} ${compChoice}`);
             text.innerHTML = message;
         }
+    </script> -->
+
+    <script>
+        for (i = 0; i <= 10; console.log(i++)) {};
     </script>
 
+    <script>
+        function piramid() {
+            let x = 'x';
+            for (i = 0; i < 20; i++) {
+                console.log(x);
+                x = x + 'x';
+            }
+        }
+    </script>
 </body>
 
 </html>
