--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
     <br><br>
     <button onclick="clearResult()">Сбросить результаты</button>
     <hr> -->
+
+
     <button onclick="piramid()">Piramid</button>
+    <button onclick="numberFind()">NumberFind</button>
+    <button onclick="bullCow()">BandC</button>
+    <button onclick="random()">BandC</button>
+
     <!-- <script class="tmp">
         function tmp() {
             let res;
@@ -303,17 +309,154 @@
         }
     </script> -->
 
-    <script>
+    <script class="forNoBody">
         for (i = 0; i <= 10; console.log(i++)) {};
     </script>
 
-    <script>
+    <script class="piramid">
         function piramid() {
             let x = 'x';
             for (i = 0; i < 20; i++) {
                 console.log(x);
                 x = x + 'x';
             }
+        }
+    </script>
+
+    <script>
+        // let n = 10;
+        // let i = 2;
+        // let j = 2;
+
+        // do {
+        //     while (!(i % j == 0) || j > i) {
+        //         console.log(i);
+        //         j++;
+        //     }
+        //     i++;
+        // } while (i < n);
+
+
+
+        // let n = 10;
+
+        // nextPrime:
+        //     for (let i = 2; i <= n; i++) { // Для всех i...
+
+        //         for (let j = 2; j < i; j++) { // проверить, делится ли число..
+        //             if (i % j == 0) continue nextPrime; // не подходит, берём следующее
+        //         }
+
+        //         alert(i); // простое число
+        //     }
+
+        // function numberFind() {
+        //     let n = 2;
+        //     let j = 1;
+        //     nextPrime:
+        //         for (let n = 2; n < 10; n++) {
+        //             while (!(n % j == 0) && j == n) {                        
+        //                 console.log(n);
+        //                 j++;
+        //                 continue nextPrime;
+        //             }                    
+        //             j = 2;
+        //         }
+        // }
+    </script>
+
+    <script>
+        function random() {
+            let number = [];
+            console.log(randomNumBC(number));
+
+        }
+
+        function bullCow() {
+            let number = [];
+            let answer = [];
+
+            randomNumBC(number);
+
+            questionOfNumber(answer);
+
+            validNumber(answer, number);
+        }
+
+        function checkResult(number, answer) {
+            if (bull(number, answer) < 4) {
+                console.log('Попробуйте еще раз');
+                questionOfNumber();
+            }
+        }
+
+        function validNumber(answer, number) {
+            let validAnswer = 0;
+            answer.forEach(elAnswer => {
+                if (!(isNaN(elAnswer))) {
+                    validAnswer++;
+                }
+            });
+            if (validAnswer == 4) {
+                output(number, answer);
+            }
+        }
+
+        function questionOfNumber(answer) {
+            for (i = 0; i < 4; i++) {
+                answer[i] = +prompt(`Введите число ${i + 1}`);
+            }
+            return answer;
+        }
+
+        function output(number, answer) {
+            console.log(number);
+            console.log(answer);
+            console.log(cow(number, answer));
+            console.log(bull(number, answer));
+
+            checkResult(number, answer);
+        }
+
+        function validArr(number) {
+            number.forEach(function (elNumber) {
+                number.forEach(function (number) {
+                    if (number == elNumber) {
+                        number = Math.floor(Math.random() * 9);
+                    }
+                });
+            });
+        }
+
+        function randomNumBC(number) {
+
+            while (number.length < 4) {
+                number[number.length] = Math.floor(Math.random() * 9);
+                validArr(number);
+            }
+            return number;
+        }
+
+        function cow(number, answer) {
+            let cow = 0
+            number.forEach(elNumer => {
+                answer.forEach(elAnswer => {
+                    if (elAnswer == elNumer) {
+                        cow++;
+                    }
+                });
+            });
+            return cow;
+        }
+
+        function bull(number, answer) {
+            let bull = 0;
+            number.forEach(function (number, index) {
+                if (number == answer[index]) {
+                    bull++;
+                }
+            });
+            return bull;
         }
     </script>
 </body>
