--- a/index.html
+++ b/index.html
@@ -322,47 +322,47 @@
         }
     </script>
 
-    <script>
-        // let n = 10;
-        // let i = 2;
-        // let j = 2;
+    <!-- <script>  не доделанно
+        let n = 10;
+        let i = 2;
+        let j = 2;
 
-        // do {
-        //     while (!(i % j == 0) || j > i) {
-        //         console.log(i);
-        //         j++;
-        //     }
-        //     i++;
-        // } while (i < n);
+        do {
+            while (!(i % j == 0) || j > i) {
+                console.log(i);
+                j++;
+            }
+            i++;
+        } while (i < n);
 
 
 
-        // let n = 10;
+        let n = 10;
 
-        // nextPrime:
-        //     for (let i = 2; i <= n; i++) { // Для всех i...
+        nextPrime:
+            for (let i = 2; i <= n; i++) { // Для всех i...
 
-        //         for (let j = 2; j < i; j++) { // проверить, делится ли число..
-        //             if (i % j == 0) continue nextPrime; // не подходит, берём следующее
-        //         }
+                for (let j = 2; j < i; j++) { // проверить, делится ли число..
+                    if (i % j == 0) continue nextPrime; // не подходит, берём следующее
+                }
 
-        //         alert(i); // простое число
-        //     }
+                alert(i); // простое число
+            }
 
-        // function numberFind() {
-        //     let n = 2;
-        //     let j = 1;
-        //     nextPrime:
-        //         for (let n = 2; n < 10; n++) {
-        //             while (!(n % j == 0) && j == n) {                        
-        //                 console.log(n);
-        //                 j++;
-        //                 continue nextPrime;
-        //             }                    
-        //             j = 2;
-        //         }
-        // }
-    </script>
+        function numberFind() {
+            let n = 2;
+            let j = 1;
+            nextPrime:
+                for (let n = 2; n < 10; n++) {
+                    while (!(n % j == 0) && j == n) {                        
+                        console.log(n);
+                        j++;
+                        continue nextPrime;
+                    }                    
+                    j = 2;
+                }
+        }
+    </script> -->
 
     <script>
 
